<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".ui.welcome.WelcomeActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/welcomeImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/ic_login_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/semibold"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="@+id/welcomeImg"
            app:layout_constraintStart_toStartOf="@+id/welcomeImg"
            app:layout_constraintTop_toBottomOf="@+id/welcomeImg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCreateAccountSuccessfully"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:text="@string/your_account_created_successfully"
            android:textColor="@color/gray_purple"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@+id/txtWelcome"
            app:layout_constraintStart_toStartOf="@+id/txtWelcome"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/curved_button_blue"
            android:fontFamily="@font/bold"
            android:text="@string/Continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCreateAccountSuccessfully" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>