<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".ui.forgettable.ForgetPasswordActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImg"
            android:layout_width="@dimen/_62sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginTop="@dimen/_55sdp"
            android:background="@drawable/ic_app_logo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/semibold"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/logoImg"
            app:layout_constraintStart_toStartOf="@+id/logoImg"
            app:layout_constraintTop_toBottomOf="@+id/logoImg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtToRetrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="@string/to_retrieve_your_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/txtEnterMobile"
            app:layout_constraintStart_toStartOf="@+id/txtEnterMobile"
            app:layout_constraintTop_toBottomOf="@+id/txtEnterMobile" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/regular"
            android:text="@string/mobile_number"
            android:textColor="@color/gray_purple"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtToRetrieve"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileNumberTil"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/curved_edittext"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMobileNumber"

            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileNumberEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@null"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/curved_button_blue"
            android:fontFamily="@font/bold"
            android:text="@string/Continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumberTil" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>