<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".ui.signup.VerifyOtpActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_62sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@drawable/ic_app_logo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80sdp"
            android:fontFamily="@font/semibold"
            android:text="@string/verify_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layChangeMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/txtOtp"
            app:layout_constraintStart_toStartOf="@+id/txtOtp"
            app:layout_constraintTop_toBottomOf="@+id/txtOtp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtChangeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/semibold"
                android:text="@string/change_number"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/semibold"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toEndOf="@+id/txtChangeNumber"
                app:layout_constraintTop_toTopOf="@+id/txtChangeNumber"
                tools:text="01016192447" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:itemBackground="@drawable/curved_edittext"
            android:textColor="@color/black"
            app:OtpItemCount="4"
            app:OtpItemSpacing="20dp"
            app:OtpLineColor="@android:color/transparent"
            app:OtpViewType="line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layChangeMobile"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/curved_butoon_gray"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@+id/confirmButton"
            app:layout_constraintStart_toStartOf="@+id/confirmButton"
            app:layout_constraintTop_toBottomOf="@+id/confirmButton">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNotReceiveOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/not_receive_otp_code"
                android:textColor="@color/gray_purple"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/semibold"
                android:text="@string/resend"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@+id/txtNotReceiveOtp"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>